{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 523,
  "lineage": "e17d470a-d3ad-042b-f06f-b8edb1fb5f94",
  "resources": [
    {
      "module": "module.backend.module.ecs.module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:security-group/sg-02d550356d4328413",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d550356d4328413",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30418,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c3d376b0d913a904"
                ],
                "self": false,
                "to_port": 30418
              }
            ],
            "name": "terraform-20241014024149465200000012",
            "name_prefix": "terraform-",
            "owner_id": "241875560804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todolist-backend-ecs-service-sg"
            },
            "tags_all": {
              "Name": "todolist-backend-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend.module.ecs.module.ecs.module.network.data.aws_vpcs.main",
            "module.frontend.module.alb.module.alb.aws_security_group.alb_sg",
            "module.frontend.module.alb.module.alb.module.global_network.data.aws_vpcs.main",
            "module.frontend.module.ecs.module.ecs.aws_security_group.main",
            "module.frontend.module.ecs.module.ecs.module.network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_policy.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_cloudwatch_log_group.vpc_endpoint_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_flow_log.vpc_endpoint_flow_log",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_policy.vpc_endpoint_logs_policy",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role.vpc_endpoint_logs_role",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role_policy_attachment.vpc_endpoint_logs_role_attachment",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.cloudwatch_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_api",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_dkr",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.s3",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend.module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:loadbalancer/app/todolist-frontend-alb/f658388fda4e47a0",
            "arn_suffix": "app/todolist-frontend-alb/f658388fda4e47a0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "todolist-frontend-alb-2144786059.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:loadbalancer/app/todolist-frontend-alb/f658388fda4e47a0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "todolist-frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05ec78e6e3b6d060c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00774d9c4e83d70da"
              },
              {
                "subnet_id": "subnet-01eb637bac3449626"
              }
            ],
            "subnets": [
              "subnet-00774d9c4e83d70da",
              "subnet-01eb637bac3449626"
            ],
            "vpc_id": "vpc-05b3025267b31559c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.frontend.module.alb.module.alb.aws_security_group.alb_sg",
            "module.frontend.module.alb.module.alb.module.global_network.data.aws_subnets.public",
            "module.frontend.module.alb.module.alb.module.global_network.data.aws_subnets.public2",
            "module.frontend.module.alb.module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_policy.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_cloudwatch_log_group.vpc_endpoint_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_flow_log.vpc_endpoint_flow_log",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_policy.vpc_endpoint_logs_policy",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role.vpc_endpoint_logs_role",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role_policy_attachment.vpc_endpoint_logs_role_attachment",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.cloudwatch_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_api",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_dkr",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.s3",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend.module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:listener/app/todolist-frontend-alb/f658388fda4e47a0/3e482a60c4567f99",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:targetgroup/todolist-frontend-lb-tg/d51b44ae47b932c8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:listener/app/todolist-frontend-alb/f658388fda4e47a0/3e482a60c4567f99",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:loadbalancer/app/todolist-frontend-alb/f658388fda4e47a0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend.module.alb.module.alb.aws_lb.main",
            "module.frontend.module.alb.module.alb.aws_lb_target_group.main",
            "module.frontend.module.alb.module.alb.aws_security_group.alb_sg",
            "module.frontend.module.alb.module.alb.module.global_network.data.aws_subnets.public",
            "module.frontend.module.alb.module.alb.module.global_network.data.aws_subnets.public2",
            "module.frontend.module.alb.module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_policy.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_cloudwatch_log_group.vpc_endpoint_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_flow_log.vpc_endpoint_flow_log",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_policy.vpc_endpoint_logs_policy",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role.vpc_endpoint_logs_role",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role_policy_attachment.vpc_endpoint_logs_role_attachment",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.cloudwatch_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_api",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_dkr",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.s3",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend.module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:targetgroup/todolist-frontend-lb-tg/d51b44ae47b932c8",
            "arn_suffix": "targetgroup/todolist-frontend-lb-tg/d51b44ae47b932c8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:targetgroup/todolist-frontend-lb-tg/d51b44ae47b932c8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:loadbalancer/app/todolist-frontend-alb/f658388fda4e47a0"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "todolist-frontend-lb-tg",
            "port": 30504,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "dependencies": [
            "module.frontend.module.alb.module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_policy.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_cloudwatch_log_group.vpc_endpoint_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_flow_log.vpc_endpoint_flow_log",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_policy.vpc_endpoint_logs_policy",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role.vpc_endpoint_logs_role",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role_policy_attachment.vpc_endpoint_logs_role_attachment",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.cloudwatch_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_api",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_dkr",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.s3",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend.module.alb.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:security-group/sg-05ec78e6e3b6d060c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ec78e6e3b6d060c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2024101402414428700000000e",
            "name_prefix": "terraform-",
            "owner_id": "241875560804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todolist-frontend-alb-sg"
            },
            "tags_all": {
              "Name": "todolist-frontend-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend.module.alb.module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_policy.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_cloudwatch_log_group.vpc_endpoint_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_flow_log.vpc_endpoint_flow_log",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_policy.vpc_endpoint_logs_policy",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role.vpc_endpoint_logs_role",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role_policy_attachment.vpc_endpoint_logs_role_attachment",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.cloudwatch_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_api",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_dkr",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.s3",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend.module.ecs.module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:security-group/sg-0c3d376b0d913a904",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3d376b0d913a904",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30504,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05ec78e6e3b6d060c"
                ],
                "self": false,
                "to_port": 30504
              }
            ],
            "name": "terraform-20241014024146803700000011",
            "name_prefix": "terraform-",
            "owner_id": "241875560804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todolist-frontend-ecs-service-sg"
            },
            "tags_all": {
              "Name": "todolist-frontend-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend.module.alb.module.alb.aws_security_group.alb_sg",
            "module.frontend.module.alb.module.alb.module.global_network.data.aws_vpcs.main",
            "module.frontend.module.ecs.module.ecs.module.network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_policy.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_policy_attachment",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_cloudwatch_log_group.vpc_endpoint_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_flow_log.vpc_endpoint_flow_log",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_policy.vpc_endpoint_logs_policy",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role.vpc_endpoint_logs_role",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_iam_role_policy_attachment.vpc_endpoint_logs_role_attachment",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.cloudwatch_logs",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_api",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.ecr_dkr",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_vpc_endpoint.s3",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.public2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.external.namespace_id",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecr_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:security-group/sg-0821d1a3e28892ff3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0821d1a3e28892ff3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20241014024048848200000004",
            "name_prefix": "terraform-",
            "owner_id": "241875560804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todolist-vpc_endpoint-sg"
            },
            "tags_all": {
              "Name": "todolist-vpc_endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc-endpoint/vpce-0576ce5ac0855cee5",
            "dns_entry": [
              {
                "dns_name": "vpce-0576ce5ac0855cee5-bwivyb8j.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0576ce5ac0855cee5-bwivyb8j-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0576ce5ac0855cee5-bwivyb8j-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0368469MRJSZ550BMNP"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z03675563GRVXOEO4BHSV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0576ce5ac0855cee5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08abd93b1d1c02896",
              "eni-0f7722a69a1204da5"
            ],
            "owner_id": "241875560804",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0821d1a3e28892ff3"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.249",
                "subnet_id": "subnet-053d88e667524872b"
              },
              {
                "ipv4": "10.0.12.50",
                "subnet_id": "subnet-01afbd50371126959"
              }
            ],
            "subnet_ids": [
              "subnet-01afbd50371126959",
              "subnet-053d88e667524872b"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "dependencies": [
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc-endpoint/vpce-0348013984550c553",
            "dns_entry": [
              {
                "dns_name": "vpce-0348013984550c553-40p0rl6t.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0348013984550c553-40p0rl6t-ap-northeast-1c.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0348013984550c553-40p0rl6t-ap-northeast-1a.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "api.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0318526P9SH3H9NEFS9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0348013984550c553",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02c85bf6448f873fe",
              "eni-04bf7665fb1cb2fc4"
            ],
            "owner_id": "241875560804",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0821d1a3e28892ff3"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.api",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.143",
                "subnet_id": "subnet-053d88e667524872b"
              },
              {
                "ipv4": "10.0.12.238",
                "subnet_id": "subnet-01afbd50371126959"
              }
            ],
            "subnet_ids": [
              "subnet-01afbd50371126959",
              "subnet-053d88e667524872b"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "dependencies": [
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc-endpoint/vpce-027ac22427ae917d5",
            "dns_entry": [
              {
                "dns_name": "vpce-027ac22427ae917d5-mjlsf9sf.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-027ac22427ae917d5-mjlsf9sf-ap-northeast-1c.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-027ac22427ae917d5-mjlsf9sf-ap-northeast-1a.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z036777235OLIG3FQ5J5O"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z036777235OLIG3FQ5J5O"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-027ac22427ae917d5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05afc5749d5781414",
              "eni-0eb1c796e0413bb37"
            ],
            "owner_id": "241875560804",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0821d1a3e28892ff3"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.dkr",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.110",
                "subnet_id": "subnet-053d88e667524872b"
              },
              {
                "ipv4": "10.0.12.59",
                "subnet_id": "subnet-01afbd50371126959"
              }
            ],
            "subnet_ids": [
              "subnet-01afbd50371126959",
              "subnet-053d88e667524872b"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "dependencies": [
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.aws_security_group.ecr_endpoint_sg",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_subnets.private2",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc-endpoint/vpce-0fc63143dd618aa78",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.20.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "id": "vpce-0fc63143dd618aa78",
            "owner_id": "241875560804",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0ca6e2bead56b939a"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "dependencies": [
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_route_tables.private_rt",
            "module.global_bootstrap.module.ecs.module.vpc_endpoint_for_access_ecr.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_1",
            "module.global_bootstrap.module.network.aws_route_table_association.private_rt_assoc_2",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_service_discovery_private_dns_namespace.main",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:internet-gateway/igw-038aa06a52f9b8ff5",
            "id": "igw-038aa06a52f9b8ff5",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-igw"
            },
            "tags_all": {
              "Name": "todolist-igw"
            },
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:route-table/rtb-0ca6e2bead56b939a",
            "id": "rtb-0ca6e2bead56b939a",
            "owner_id": "241875560804",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "todolist-private-route-table"
            },
            "tags_all": {
              "Name": "todolist-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:route-table/rtb-017846bfdb402cb0e",
            "id": "rtb-017846bfdb402cb0e",
            "owner_id": "241875560804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038aa06a52f9b8ff5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todolist-public-route-table"
            },
            "tags_all": {
              "Name": "todolist-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2f78f859372798d",
            "route_table_id": "rtb-0ca6e2bead56b939a",
            "subnet_id": "subnet-053d88e667524872b"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c610a178dbbafbf5",
            "route_table_id": "rtb-0ca6e2bead56b939a",
            "subnet_id": "subnet-01afbd50371126959"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_route_table.private_rt",
            "module.global_bootstrap.module.network.aws_subnet.private2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a85f385ea91d1c44",
            "route_table_id": "rtb-017846bfdb402cb0e",
            "subnet_id": "subnet-01eb637bac3449626"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046333fd8447b8a36",
            "route_table_id": "rtb-017846bfdb402cb0e",
            "subnet_id": "subnet-00774d9c4e83d70da"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-053d88e667524872b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053d88e667524872b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-private-an1a-subnet"
            },
            "tags_all": {
              "Name": "todolist-private-an1a-subnet"
            },
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-01afbd50371126959",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01afbd50371126959",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-private-an1c-subnet"
            },
            "tags_all": {
              "Name": "todolist-private-an1c-subnet"
            },
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-01eb637bac3449626",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eb637bac3449626",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-public-an1a-subnet"
            },
            "tags_all": {
              "Name": "todolist-public-an1a-subnet"
            },
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-00774d9c4e83d70da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00774d9c4e83d70da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-public-an1c-subnet"
            },
            "tags_all": {
              "Name": "todolist-public-an1c-subnet"
            },
            "vpc_id": "vpc-05b3025267b31559c"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc/vpc-05b3025267b31559c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e605b207e1ec8c1",
            "default_route_table_id": "rtb-0f8e75d16f2798f6b",
            "default_security_group_id": "sg-029c4c4da2f419e99",
            "dhcp_options_id": "dopt-4871452f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b3025267b31559c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8e75d16f2798f6b",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-vpc"
            },
            "tags_all": {
              "Name": "todolist-vpc"
            }
          }
        }
      ]
    }
  ]
}